--- a/story.html
+++ b/story.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
+    <title>Story Page</title>
     <link rel="stylesheet" href="styles/shared.css" />
   </head>
   <body></body>
