--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles/shared.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="frame">
+      <div class="container">
+        <div class="dim" />
+        <div class="nav">
+          <span class="nav-btn">Story</span>
+          <span class="nav-btn">Parley</span>
+          <span class="nav-btn">Product</span>
+          <span class="nav-btn">Event</span>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
