banner nav styling

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
   <body>
     <div class="frame">
       <div class="container">
-        <div class="dim" />
         <div class="nav">
-          <span class="nav-btn">Story</span>
-          <span class="nav-btn">Parley</span>
-          <span class="nav-btn">Product</span>
-          <span class="nav-btn">Event</span>
+          <div class="story-btn dim">
+            <span class="nav-btn">Story</span>
+          </div>
+          <div class="parley-btn dim stroke">
+            <span class="nav-btn">Parley</span>
+          </div>
+          <div class="product-btn dim stroke">
+            <span class="nav-btn">Product</span>
+          </div>
+          <div class="event-btn dim stroke">
+            <span class="nav-btn">Event</span>
+          </div>
         </div>
       </div>
     </div>
