--- a/product.html
+++ b/product.html
@@ -6,5 +6,24 @@
     <title>Product Page</title>
     <link rel="stylesheet" href="styles/shared.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="frame">
+      <div class="container">
+        <div class="nav">
+          <div class="story-btn dim">
+            <span class="nav-btn">Story</span>
+          </div>
+          <div class="parley-btn dim stroke">
+            <span class="nav-btn">Parley</span>
+          </div>
+          <div class="product-btn dim stroke">
+            <span class="nav-btn">Product</span>
+          </div>
+          <div class="event-btn dim stroke">
+            <span class="nav-btn">Event</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
