Add background image

--- a/product.html
+++ b/product.html
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Page</title>
     <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="styles/product.css" />
   </head>
   <body>
     <div class="frame">
       <div class="container">
-        <div class="nav">
+        <nav class="nav">
           <a class="dim nav-btn" href="">Story</a>
           <a class="dim nav-btn stroke" href="">Parley</a>
           <a class="dim nav-btn stroke" href="">Product</a>
           <a class="dim nav-btn stroke" href="">Event</a>
+        </nav>
+
+        <div class="background-img">
+          <img src="./images/product-bg-img.png" alt="background-img " />
         </div>
+        <div class="background-dim"></div>
       </div>
     </div>
   </body>
