--- a/story8.html
+++ b/story8.html
@@ -9,20 +9,12 @@
   <body>
     <div class="frame">
       <div class="container">
-        <div class="nav">
-          <div class="story-btn dim">
-            <span class="nav-btn">Story</span>
-          </div>
-          <div class="parley-btn dim stroke">
-            <span class="nav-btn">Parley</span>
-          </div>
-          <div class="product-btn dim stroke">
-            <span class="nav-btn">Product</span>
-          </div>
-          <div class="event-btn dim stroke">
-            <span class="nav-btn">Event</span>
-          </div>
-        </div>
+        <nav class="nav">
+          <a class="dim nav-btn" href="">Story</a>
+          <a class="dim nav-btn stroke" href="">Parley</a>
+          <a class="dim nav-btn stroke" href="">Product</a>
+          <a class="dim nav-btn stroke" href="">Event</a>
+        </nav>
       </div>
     </div>
   </body>
