--- a/product.html
+++ b/product.html
@@ -17,10 +17,28 @@
           <a class="dim nav-btn stroke" href="">Event</a>
         </nav>
 
-        <div class="background-img">
-          <img src="./images/product-bg-img.png" alt="background-img " />
+        <div class="content">
+          <!-- <img src="./images/product-bg-img.png" alt="background-img " /> -->
+          <div class="background-dim"></div>
+          <div class="content-1">
+            <img src="/images/product-1.png" alt="" />
+            <strong>해로움에서 찾은 새로움</strong>
+            <span
+              >플라스틱 폐기물을 없애기 위한 아디다스의 도전과 <br />
+              혁신을 상징하는 팔리 오션 플라스틱이 사용된 친환경 제품</span
+            >
+          </div>
+          <div class="content-2">
+            <img src="/images/product-2.png" alt="" />
+            <strong></strong>
+            <span></span>
+          </div>
+          <div class="content-3">
+            <img src="/images/product-3.png" alt="" />
+            <strong></strong>
+            <span></span>
+          </div>
         </div>
-        <div class="background-dim"></div>
       </div>
     </div>
   </body>
