Navigation opacity styling  issue

--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
         <nav class="nav">
           <a class="dim nav-btn" href="">Story</a>
           <a class="dim nav-btn stroke" href="">Parley</a>
-          <a class="dim nav-btn stroke" href="">Product</a>
+          <a class="dim nav-btn stroke selected" href="">Product</a>
           <a class="dim nav-btn stroke" href="">Event</a>
         </nav>
 
