Connect story7 to product page

--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
     <div class="frame">
       <div class="container">
         <nav class="nav">
-          <a class="dim nav-btn" href="">Story</a>
+          <a class="dim nav-btn" href="./story7.html">Story</a>
           <a class="dim nav-btn stroke" href="">Parley</a>
           <a class="dim nav-btn stroke selected" href="">Product</a>
           <a class="dim nav-btn stroke" href="">Event</a>
