--- a/product.html
+++ b/product.html
@@ -10,6 +10,9 @@
   <body>
     <div class="frame">
       <div class="container">
+        <div class="home-btn">
+          <img src="images/home-btn.png" alt="home-btn" />
+        </div>
         <nav class="nav">
           <a class="dim nav-btn" href="./story7.html">Story</a>
           <a class="dim nav-btn stroke" href="">Parley</a>
