--- a/story8.html
+++ b/story8.html
@@ -15,7 +15,7 @@
         <nav class="nav">
           <a class="dim nav-btn" href="">Story</a>
           <a class="dim nav-btn stroke" href="">Parley</a>
-          <a class="dim nav-btn stroke" href="">Product</a>
+          <a class="dim nav-btn stroke" href="./product.html">Product</a>
           <a class="dim nav-btn stroke" href="">Event</a>
         </nav>
       </div>
