--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="styles/landing.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="landing-frame"><a href="story7.html">
+      <video class="landing-vid" autoplay muted loop>
+          <source src="videos/landing_vid.mp4" type="video/mp4">
+      </video>
+      <div class="landing-dim"></div>
+
+      <div class="landing-log">
+        <img src="images/landing-log.png">
+      </div>
+      <h1 class="color-h1-1">A MISSION FOR OUR OCEANS</h1>
+      <h1 class="color-h1-2">A MOVEMENT BEGINS</h3>
+      <p>Press to start</p>
+
+    </a></div>
+  </body>
 </html>
