Adjust selected button dim

--- a/product.html
+++ b/product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,7 +16,12 @@
         <nav class="nav">
           <a class="dim nav-btn" href="./story7.html">Story</a>
           <a class="dim nav-btn stroke" href="">Parley</a>
-          <a class="dim nav-btn stroke selected" href="">Product</a>
+          <a class="dim nav-btn stroke selected" href="">
+            <div class="selected-box">
+              <img src="./images/selected-btn.png" alt="" />
+            </div>
+            <span>Product</span>
+          </a>
           <a class="dim nav-btn stroke" href="">Event</a>
         </nav>
 
