Add font pretendard

--- a/product.html
+++ b/product.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Page</title>
+    <!-- <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css"
+    /> -->
     <link rel="stylesheet" href="styles/shared.css" />
     <link rel="stylesheet" href="styles/product.css" />
   </head>
@@ -26,7 +32,6 @@
         </nav>
 
         <div class="content-container">
-          <!-- <img src="./images/product-bg-img.png" alt="background-img " /> -->
           <div class="background-dim"></div>
           <div class="content-1">
             <img src="images/product-1.png" alt="" />
