--- a/story7.html
+++ b/story7.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Story7 Page</title>
-    <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="./styles/story7.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="scripts/story7.js" defer></script>
+    <!-- p5.js 스케치 파일 -->
   </head>
   <body>
     <div class="frame">
@@ -18,6 +21,33 @@
           <a class="dim nav-btn stroke" href="./product.html">Product</a>
           <a class="dim nav-btn stroke" href="">Event</a>
         </nav>
+        <div class="background" alt="background" id="storybackground">
+          <img src="images/story_background.png" />
+        </div>
+
+        <div class="next_btn">
+          <img src="images/right-arrow.png" alt="next_btn" id="next_btn" />
+        </div>
+        <div class="info_image_1">
+          <img src="images/story7_img1.png" alt="img1" id="info_image_1" />
+        </div>
+        <div class="info_image_1_text">
+          <img
+            src="images/story7_img1_text.png"
+            alt="img1_text"
+            id="info_image_1_text"
+          />
+        </div>
+        <div class="info_image_2">
+          <img src="images/story7_img2.png" alt="img2" id="info_image_2" />
+        </div>
+        <div class="info_image_2_text">
+          <img
+            src="images/story7_img2_text.png"
+            alt="img2_text"
+            id="info_image_2_text"
+          />
+        </div>
       </div>
     </div>
   </body>
