--- a/story8.html
+++ b/story8.html
@@ -13,27 +13,40 @@
           <img src="images/home-btn.png" alt="home-btn" />
         </div>
         <nav class="nav">
-          <a class="dim nav-btn" href="./story7.html">Story</a>
-          <a class="dim nav-btn stroke" href="">Parley</a>
-          <a class="dim nav-btn stroke" href="./product.html">Product</a>
+          <a class="dim nav-btn stroke selected" href="./story7.html">
+            <div class="selected-box">
+              <img src="./images/selected-btn.png" alt="" />
+            </div>
+            <span>Story</span>
+          </a>
+          <a class="dim nav-btn" href="./story7.html">Parley</a>
+          <a class="dim nav-btn stroke" href="">Product</a>
           <a class="dim nav-btn stroke" href="">Event</a>
         </nav>
 
         <div class="background" alt="background" id="storybackground">
-          <img src = "images/story_background.png">
+          <img src="images/story_background.png" />
         </div>
 
         <div class="info_image_1">
-          <img src="images/story8_img1.png" alt="img1" id="info_image_1"/>
+          <img src="images/story8_img1.png" alt="img1" id="info_image_1" />
         </div>
         <div class="info_image_1_text">
-          <img src="images/story8_img1_text.png" alt="img1_text" id="info_image_1_text"/>
+          <img
+            src="images/story8_img1_text.png"
+            alt="img1_text"
+            id="info_image_1_text"
+          />
         </div>
         <div class="info_image_2">
-          <img src="images/story8_img2.png" alt="img2" id="info_image_2"/>
+          <img src="images/story8_img2.png" alt="img2" id="info_image_2" />
         </div>
         <div class="info_image_2_text">
-          <img src="images/story8_img2_text.png" alt="img2_text" id="info_image_2_text"/>
+          <img
+            src="images/story8_img2_text.png"
+            alt="img2_text"
+            id="info_image_2_text"
+          />
         </div>
       </div>
     </div>
