Page connect story 7 to product

--- a/story8.html
+++ b/story8.html
@@ -20,7 +20,7 @@
             <span>Story</span>
           </a>
           <a class="dim nav-btn" href="./story7.html">Parley</a>
-          <a class="dim nav-btn stroke" href="">Product</a>
+          <a class="dim nav-btn stroke" href="./product.html">Product</a>
           <a class="dim nav-btn stroke" href="">Event</a>
         </nav>
 
