landing, shared.css, ... changing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/landing.css" />
   </head>
   <body>
@@ -20,8 +20,8 @@
       <div class="landing-log">
         <img src="images/landing-log.png">
       </div>
-      <h1 class="color-h1-1">A MISSION FOR OUR OCEANS</h1>
-      <h1 class="color-h1-2">A MOVEMENT BEGINS</h3>
+      <h2 class="color-h2-1">A MISSION FOR OUR OCEANS</h1>
+      <h2 class="color-h2-2">A MOVEMENT BEGINS</h3>
       <p>Press to start</p>
 
     </a></div>
