--- a/story7.html
+++ b/story7.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Story7 Page</title>
     <link rel="stylesheet" href="./styles/story7.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="scripts/story7.js" defer></script>
     <!-- p5.js 스케치 파일 -->
