--- a/story8.html
+++ b/story8.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Story8 Page</title>
     <link rel="stylesheet" href="styles/story8.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
     <div class="frame">
