--- a/story8.html
+++ b/story8.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Story8 Page</title>
     <link rel="stylesheet" href="styles/story8.css" />
-    <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
     <div class="frame">
@@ -25,30 +24,31 @@
           <a class="dim nav-btn stroke" href="">Event</a>
         </nav>
 
-        <div class="background" alt="background" id="storybackground">
-          <img src="images/story_background.png" />
-        </div>
+        <video class="story_vid" autoplay muted loop>
+          <source src="videos/story_video.mp4" type="video/mp4" />
+        </video>
+        <div class="story-dim"></div>
 
         <div class="info_image_1">
           <img src="images/story8_img1.png" alt="img1" id="info_image_1" />
         </div>
-        <div class="info_image_1_text">
-          <img
-            src="images/story8_img1_text.png"
-            alt="img1_text"
-            id="info_image_1_text"
-          />
-        </div>
+        <h1 class="info_image_1_title">11개의 플라스틱 병으로 만드는 기적</h1>
+        <h5 class="info_image_1_text">
+          업사이클링 신발 한켤레를 만드는 데<br />
+          약 11개의 플리스틱 병이 재활용되어,<br />
+          이 병들이 잠재적으로 바다에 유입 되는 것을 방지합니다.
+        </h5>
         <div class="info_image_2">
           <img src="images/story8_img2.png" alt="img2" id="info_image_2" />
         </div>
-        <div class="info_image_2_text">
-          <img
-            src="images/story8_img2_text.png"
-            alt="img2_text"
-            id="info_image_2_text"
-          />
-        </div>
+        <h1 class="info_image_2_title">지속 가능한 미래를 향한 약속</h1>
+        <h5 class="info_image_2_text">
+          아디다스는 2017년부터 2020년까지<br />
+          Parley Ocean Plastic으로 수백만 켤레의 신발을 제작하여<br />
+          환경 인식을 높이고 지속가능한 변화를 이끌었습니다.<br />
+          앞으로도 재활용과 업사이클링을 확대하여<br />
+          환경보호와 지속가능한 미래를 실현할 것입니다.
+        </h5>
       </div>
     </div>
   </body>
