--- a/story8.html
+++ b/story8.html
@@ -25,7 +25,7 @@
         </nav>
 
         <video class="story_vid" autoplay muted loop>
-          <source src="videos/story_video.mp4" type="video/mp4" />
+          <source src="videos/story_vid.mp4" type="video/mp4" />
         </video>
         <div class="story-dim"></div>
 
