--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="styles/landing.css" />
   </head>
   <body>
-    <div class="landing-frame"><a href="story7.html">
+    <div class="frame">
+          <div class="landing-frame"><a href="story7.html">
       <video class="landing-vid" autoplay muted loop>
           <source src="videos/landing_vid.mp4" type="video/mp4">
       </video>
@@ -25,5 +26,6 @@
       <p>Press to start</p>
 
     </a></div>
+    </div>
   </body>
 </html>
